test/compile_errors/err_closure_return_type_tail_mismatch.w
//! expect-check-fail: closure return type mismatch

fn main:
    let f: fn() -> i32 = () => "bad"
    let _ = f()
